infra/04-applications/04-services/back/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shodobot-back
  labels:
    app: shodobot-back
spec:
  type: ClusterIP
  selector:
    app: shodobot-back
  ports:
    - port: 80
      targetPort: 8080
